Updated splitPane style to prevent the divider from overlapping with the scroll bar.
This introduces a short border shift animation for the divider though. There might be a more elegant solution to this issue or a way to instantly set new margins for the divider.

--- a/app/assets/splitpane.css
+++ b/app/assets/splitpane.css
@@ -31,13 +31,14 @@
 
 .Resizer.vertical {
   width: 11px;
-  margin: 0 -5px;
-  border-left: 5px solid rgba(255, 255, 255, 0);
-  border-right: 5px solid rgba(255, 255, 255, 0);
+  margin: 0 -10px 0 0px;
+  border-left: 0px solid rgba(255, 255, 255, 0);
+  border-right: 10px solid rgba(255, 255, 255, 0);
   cursor: col-resize;
 }
 
 .Resizer.vertical:hover {
+  margin: 0 -5px 0 -5px;
   border-left: 5px solid rgba(0, 0, 0, 0.5);
   border-right: 5px solid rgba(0, 0, 0, 0.5);
 }
